lab 8 finished
